Fixed app.css override issue and added jQuery icon to skills

--- a/css/app.css
+++ b/css/app.css
@@ -8,10 +8,16 @@
 }
 
 .skills {
-    height: 155px;
-    width: 155px;
+    height: 125px;
+    width: 125px;
     margin-left: 12px;
     outline-color: white;
 }
+
+.section-subtitle {
+    font-size: 22pt !important;
+    color: green;
+}
+
 
 
