--- a/css/main.css
+++ b/css/main.css
@@ -179,14 +179,13 @@ background-color: transparent;
     display: inline-block; 
 }
 #grid .mix{
-    width: 200px;
-    height: 150px;
+    width: 525px;
+    height: 315px;
     vertical-align: top;
     margin:20px 20px 20px 0 ;
     color: #fff;
-    text-align: center;
-    display: inline-block; 
-
+    text-align: left;
+    display: inline-block;
 }
 
 
@@ -198,25 +197,30 @@ background-color: transparent;
 
 
 #grid .mix .overlay{
-    width: 200px;
-    height: 150px;
+    width: 525px;
+    height: 315px;
     position:absolute;
     opacity:0;
 
 }
 
 #grid .mix .overlay:hover{
-     opacity:.8;
+     opacity:.9;
 }
 
-#grid .mix .overlay i{
-    font-size: 2em;
+#grid .mix .overlay div{
+    font-size: 1.4em;
     opacity: 1;
     color: #fff;
-    padding-top: 30%;
+    padding-left: 2%;
+    padding-top: 5%;
+    padding-right: 5%;
+    margin: 10% 10% 10% 10% auto;
 }
 
- 
+#grid .mix .overlay div ul li{
+    margin: -10px !important;
+}
  
 .isotope-item {
     z-index: 2;
@@ -428,7 +432,7 @@ border-color: #b94a48;
 box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 .control-group.error .checkbox, .control-group.error .radio, .control-group.error input, .control-group.error select, .control-group.error textarea {
-color: #b94a48;
+
 }
 
 label.error{
@@ -530,6 +534,10 @@ label.valid{
 
 .btn-facebook:hover{
     color:#204385;
+}
+
+.btn-github:hover{
+    color: black;
 }
 
 .btn-dribbble:hover{
